Closed
Bug 1304558
Opened 9 years ago
Closed 9 years ago
media/webrtc/trunk/webrtc/modules/video_capture/linux/device_info_linux.h:18: fatal error: sys/inotify.h: No such file or directory
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | fixed |
People
(Reporter: jbeich, Unassigned)
References
Details
Attachments
(1 file)
BSDs support V4L2 API but neither inotify(2) nor /dev/{v4l,snd}/by-path/. inotify(3) exists in a separate library[1], not part of base operating system (i.e. a regular package).
In file included from obj/media/webrtc/trunk/webrtc/modules/modules_video_capture_module_internal_impl/Unified_cpp_webrtc_modules0.cpp:2:
In file included from media/webrtc/trunk/webrtc/modules/video_capture/linux/device_info_linux.cc:11:
In file included from media/webrtc/trunk/webrtc/modules/video_capture/linux/device_info_linux.h:18:
obj/dist/system_wrappers/sys/inotify.h:3:15: fatal error: 'sys/inotify.h' file not found
#include_next <sys/inotify.h>
^
1 error generated.
[1] https://github.com/libinotify-kqueue/libinotify-kqueue
| Comment hidden (mozreview-request) |
Comment 2•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8793573 [details]
Bug 1304558 - Unbreak BSD build after bug 1297337.
https://reviewboard.mozilla.org/r/80294/#review79044
Attachment #8793573 -
Flags: review?(rjesup) → review+
Updated•9 years ago
|
Rank: 25
Priority: -- → P2
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/6d1f666a9bc1
Unbreak BSD build after bug 1297337. r=jesup
Keywords: checkin-needed
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•