Bug 1304558 - Unbreak BSD build after bug 1297337. r=jesup

MozReview-Commit-ID: 3r2cjZlODDo